examples/errors/runtime/error3.tab
a = fn () {
  9 / 0
}

b = fn () {
  a()
}

b()
